--- a/page-zwischensitzung.html
+++ b/page-zwischensitzung.html
@@ -490,7 +490,8 @@ div.tocify {
 <div id="der-brief-vom-weihnachtsmann" class="section level1">
 <h1><span class="header-section-number">2</span> Der Brief vom Weihnachtsmann</h1>
 <p><br></p>
-<p><i> Liebe Studierende, für die Auswertung meines Rentierversuchs brauche ich Ihre Hilfe. Ich habe folgende Fragen an Sie:</p>
+<p><i> Liebe Studierende,</p>
+<p>für die Auswertung meines Rentierversuchs brauche ich Ihre Hilfe. Ich habe folgende Fragen an Sie:</p>
 <p>Wie sehen die Daten meiner 20 zunächst ungedopten Rentiere zu Beginn der Studie <strong>deskriptiv</strong> aus? - Was ist die <strong>Minimalgeschwindigkeit</strong> und was die <strong>Maximalgeschwindigkeit</strong>? - Was ist der <strong>Median</strong> und was ist der <strong>Mittelwert</strong> der Fluggeschwindigkeit zu diesem Zeitpunkt? - Bitte erstellen Sie auch eine <strong>Grafik</strong>, die geeignet ist, die <strong>Verteilung</strong> der Werte zu beschreiben. Ist die Verteilung symmetrisch oder nicht?</p>
 <p>Wie Sie sich schon denken können, interessiert mich natürlich nicht nur meine Zufallsstichprobe. Ich möchte anhand der Stichproben eigentlich gerne <strong>Rückschlüsse auf die Population</strong> ziehen.</p>
 <p>Wie schnell fliegen wohl ungedopte Rentiere im Mittel, wenn sie das ganze bisherige Jahr nur auf der faulen Haut gelegen haben?</p>
