--- a/page-zwischensitzung.html
+++ b/page-zwischensitzung.html
@@ -492,7 +492,12 @@ div.tocify {
 <p><br></p>
 <p><i> Liebe Studierende,</p>
 <p>für die Auswertung meines Rentierversuchs brauche ich Ihre Hilfe. Ich habe folgende Fragen an Sie:</p>
-<p>Wie sehen die Daten meiner 20 zunächst ungedopten Rentiere zu Beginn der Studie <strong>deskriptiv</strong> aus? - Was ist die <strong>Minimalgeschwindigkeit</strong> und was die <strong>Maximalgeschwindigkeit</strong>? - Was ist der <strong>Median</strong> und was ist der <strong>Mittelwert</strong> der Fluggeschwindigkeit zu diesem Zeitpunkt? - Bitte erstellen Sie auch eine <strong>Grafik</strong>, die geeignet ist, die <strong>Verteilung</strong> der Werte zu beschreiben. Ist die Verteilung symmetrisch oder nicht?</p>
+<p>Wie sehen die Daten meiner 20 zunächst ungedopten Rentiere zu Beginn der Studie <strong>deskriptiv</strong> aus?</p>
+<ul>
+<li><p>Was ist die <strong>Minimalgeschwindigkeit</strong> und was die <strong>Maximalgeschwindigkeit</strong>?</p></li>
+<li><p>Was ist der <strong>Median</strong> und was ist der <strong>Mittelwert</strong> der Fluggeschwindigkeit zu diesem Zeitpunkt?</p></li>
+<li><p>Bitte erstellen Sie auch eine <strong>Grafik</strong>, die geeignet ist, die <strong>Verteilung</strong> der Werte zu beschreiben. Ist die Verteilung symmetrisch oder nicht?</p></li>
+</ul>
 <p>Wie Sie sich schon denken können, interessiert mich natürlich nicht nur meine Zufallsstichprobe. Ich möchte anhand der Stichproben eigentlich gerne <strong>Rückschlüsse auf die Population</strong> ziehen.</p>
 <p>Wie schnell fliegen wohl ungedopte Rentiere im Mittel, wenn sie das ganze bisherige Jahr nur auf der faulen Haut gelegen haben?</p>
 <ul>
