--- a/index.html
+++ b/index.html
@@ -333,6 +333,11 @@ $(document).ready(function () {
     <li>
       <a href="page-07testpl.html">Sitzung 7: G*Power zur Testplanung</a>
     </li>
+    <li class="divider"></li>
+    <li>
+      <a href="page-zwischensitzung.html">Zwischensitzung: Wiederholung/ Anwendung des bisher Gelernten</a>
+    </li>
+    <li class="divider"></li>
     <li>
       <a href="page-08kontraste.html">Sitzung 8: Kontraste</a>
     </li>
