--- a/page-q1_materials.html
+++ b/page-q1_materials.html
@@ -333,6 +333,11 @@ $(document).ready(function () {
     <li>
       <a href="page-07testpl.html">Sitzung 7: G*Power zur Testplanung</a>
     </li>
+    <li class="divider"></li>
+    <li>
+      <a href="page-zwischensitzung.html">Zwischensitzung: Wiederholung/ Anwendung des bisher Gelernten</a>
+    </li>
+    <li class="divider"></li>
     <li>
       <a href="page-08kontraste.html">Sitzung 8: Kontraste</a>
     </li>
@@ -441,6 +446,19 @@ body {
 <h4>Sitzung 6: Mittelwertsunterschiede prüfen - t-Tests</h4>
 <ul>
 <li>Excel-Datensatz “Signifikanztests”: <a href="q1_dataFiles/06_Signifikanztests.xlsx">download</a></li>
+</ul>
+</div>
+<div id="sitzung-7-g-power-zur-testplanung" class="section level4">
+<h4>Sitzung 7: G-Power zur Testplanung</h4>
+<ul>
+<li>Excel-Datensatz "G*Power zur Testplanung": <a href="q1_dataFiles/07_Hypothesentesten_Testplanung.xlsx">download</a></li>
+</ul>
+</div>
+<div id="zwischensitzung-anwendung-des-bisher-gelernten" class="section level4">
+<h4>Zwischensitzung: Anwendung des bisher Gelernten</h4>
+<ul>
+<li>Excel-Datensatz “Doping am Nordpol”: <a href="q1_dataFiles/Zwischensitzung_DopingNordpol.xlsx">download</a></li>
+<li>Excel-Datensatz “Doping am Nordpol Lösung”: <a href="q1_dataFiles/Zwischensitzung_DopingNordpol_Loesung.xlsx">download</a></li>
 </ul>
 </div>
 
