--- a/page-q1_materials.html
+++ b/page-q1_materials.html
@@ -461,6 +461,12 @@ body {
 <li>Excel-Datensatz “Doping am Nordpol Lösung”: <a href="q1_dataFiles/Zwischensitzung_DopingNordpol_Loesung.xlsx">download</a></li>
 </ul>
 </div>
+<div id="sitzung-8-kontraste" class="section level4">
+<h4>Sitzung 8: Kontraste</h4>
+<ul>
+<li>Excel-Datensatz “Kontraste”: <a href="q1_dataFiles/08_Kontraste.xlsx">download</a></li>
+</ul>
+</div>
 
 <p><font size="-1.5">Copyright &copy; 2020 Simon Stephan. All rights reserved.</font></p>
 
