--- a/page-q1_materials.html
+++ b/page-q1_materials.html
@@ -34,7 +34,7 @@
   div.column{display: inline-block; vertical-align: top; width: 50%;}
   div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
   ul.task-list{list-style: none;}
-    </style>
+      </style>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -80,7 +80,6 @@ h6 {
   text-align: left;
 }
 </style>
-
 
 <link rel="stylesheet" href="styles.css" type="text/css" />
 
@@ -288,7 +287,7 @@ $(document).ready(function () {
       <ul class="nav navbar-nav">
         <li>
   <a href="index.html">
-    <span class="fas fa-home"></span>
+    <span class="fa fa-home"></span>
      
     Home
   </a>
@@ -334,9 +333,11 @@ $(document).ready(function () {
     <li>
       <a href="page-07testpl.html">Sitzung 7: G*Power zur Testplanung</a>
     </li>
+    <li class="divider"></li>
     <li>
       <a href="page-zwischensitzung.html">Zwischensitzung: Wiederholung/ Anwendung des bisher Gelernten</a>
     </li>
+    <li class="divider"></li>
     <li>
       <a href="page-08kontraste.html">Sitzung 8: Kontraste</a>
     </li>
@@ -457,6 +458,13 @@ body {
 <h4>Zwischensitzung: Anwendung des bisher Gelernten</h4>
 <ul>
 <li>Excel-Datensatz “Doping am Nordpol”: <a href="q1_dataFiles/Zwischensitzung_DopingNordpol.xlsx">download</a></li>
+<li>Excel-Datensatz “Doping am Nordpol Lösung”: <a href="q1_dataFiles/Zwischensitzung_DopingNordpol_Loesung.xlsx">download</a></li>
+</ul>
+</div>
+<div id="sitzung-8-kontraste" class="section level4">
+<h4>Sitzung 8: Kontraste</h4>
+<ul>
+<li>Excel-Datensatz “Kontraste”: <a href="q1_dataFiles/08_Kontraste.xlsx">download</a></li>
 </ul>
 </div>
 
@@ -470,7 +478,7 @@ body {
 
 // add bootstrap table styles to pandoc tables
 function bootstrapStylePandocTables() {
-  $('tr.odd').parent('tbody').parent('table').addClass('table table-condensed');
+  $('tr.header').parent('thead').parent('table').addClass('table table-condensed');
 }
 $(document).ready(function () {
   bootstrapStylePandocTables();
